--- a/template/css/_mixins.sass
+++ b/template/css/_mixins.sass
@@ -64,3 +64,7 @@
   @include gradient()
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
+
+@mixin blur()
+  -webkit-filter: blur(3px) !important
+  filter: blur(3px) !important
