--- a/template/css/app.css
+++ b/template/css/app.css
@@ -17,6 +17,12 @@ nav {
   nav ul a:hover {
     background-color: rgba(0, 0, 0, 0.5) !important; }
 
+.pointer {
+  cursor: pointer !important; }
+
+.bg__white {
+  background-color: #fff; }
+
 .f15 {
   margin-top: 5px !important;
   font-size: 15px !important; }
@@ -33,7 +39,23 @@ nav {
   .parallax-container .parallax img {
     opacity: 1 !important; }
 
+.search__pane {
+  width: 100% !important;
+  max-height: 100% !important;
+  top: 0 !important;
+  bottom: 0;
+  margin: 0 !important;
+  background-color: #fff;
+  border-radius: 0 !important; }
+
+.search__nav {
+  background-color: #fff !important; }
+
 /*main css */
+.blur__fits {
+  -webkit-filter: blur(3px) !important;
+  filter: blur(3px) !important; }
+
 .header {
   height: 60vh;
   position: relative;
@@ -46,8 +68,8 @@ nav {
     width: 100%;
     height: 60vh;
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     background-image: linear-gradient(to top left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7));
     background-image: -webkit-linear-gradient(to top left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7));
     overflow: hidden;
