--- a/template/css/main-css/main.sass
+++ b/template/css/main-css/main.sass
@@ -1,3 +1,6 @@
+.blur__fits
+  @include blur()
+
 .header
   height: 60vh
   position: relative
@@ -8,13 +11,12 @@
     attachment: fixed
     repeat: no-repeat
 
-
   .header__overlay
     width: 100%
     height: 60vh
     position: absolute
-    top: 0px
-    left: 0px
+    top: 0
+    left: 0
     @include gradient()
     overflow: hidden
     color: $white
