--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -9,6 +9,13 @@ nav
       background:
         color: rgba(0, 0, 0, .5) !important
 
+.pointer
+  cursor: pointer !important
+
+.bg__white
+  background:
+    color: $white
+
 .f15
   @include margTop(5px !important)
   font:
@@ -31,3 +38,18 @@ nav
   .parallax
     img
       opacity: 1 !important
+
+.search__pane
+  width: 100% !important
+  max-height: 100% !important
+  top: 0 !important
+  bottom: 0
+  @include marg(0 !important)
+  background:
+    color: $white
+  border:
+    radius: 0 !important
+
+.search__nav
+  background:
+    color: $white !important
