--- a/template/index.html
+++ b/template/index.html
@@ -306,11 +306,10 @@
             <i class="large material-icons">mode_edit</i>
         </a>
         <ul>
-            <li><a href="#add_event_modal" class="tooltipped modal-trigger btn-floating red" data-position="left"
+            <li><a href="#add_event_modal" class="tooltipped modal-trigger btn-floating green" data-position="left"
                    data-tooltip="Add Event"><i class="material-icons">add</i></a></li>
-            <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-            <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-            <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+            <li><a class="btn-floating red tooltipped modal-trigger" data-position="left"
+                   data-tooltip="Delete Event"><i class="material-icons">delete</i></a></li>
         </ul>
     </div>
 
@@ -328,11 +327,12 @@
 <!-- Modal Structure -->
 <div id="add_event_modal" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <h4>Modal Header</h4>
+        <h4>Create Event</h4>
         <p>A bunch of text</p>
     </div>
     <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+        <a href="#!" class="modal-action modal-close waves-effect btn-flat">Cancel</a>
+        <a href="#!" class="btn waves-effect green lighten-1">Create</a>
     </div>
 </div>
 
@@ -385,6 +385,7 @@
             },
             complete: function() {
                 $('.body__holdr').removeClass('blur__fits');
+                $('.modal-overlay').css({'display': 'none'});
                 this.removeClass('search__pane');
             } // Callback for Modal close
         });
