--- a/template/index.html
+++ b/template/index.html
@@ -344,7 +344,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s1">
-                    <a class="btn btn-flat white waves-effect search__back_btn" style="height: 64px;padding-top: 12px;padding-bottom: 12px;"><i class="material-icons">call_received</i></a>
+                    <a class="btn btn-flat white waves-effect search__back_btn" style="height: 64px;padding-top: 12px;padding-bottom: 12px;"><i class="material-icons">arrow_back</i></a>
                 </div>
                 <div class="col s11">
                     <nav>
